[tool.poetry]
name = "plot-access-targets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
astropy = "^4.3.1"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
pandas = "^1.3.4"
pyvo = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
